--- a/css/index.css
+++ b/css/index.css
@@ -61,8 +61,8 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: -webkit-gradient(linear, left top, left bottom, from(#5300d6), to(#dd0055));
-  background: linear-gradient(#5300d6, #dd0055);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(159, 223, 255, 0.1)), to(#9fdfff));
+  background: linear-gradient(rgba(159, 223, 255, 0.1), #9fdfff);
   border-radius: 5px;
 }
 
@@ -997,24 +997,6 @@ body main .skill .wrapper #earth {
   border-radius: 50%;
 }
 
-body main .skill .wrapper #show_image {
-  display: none;
-}
-
-@media screen and (min-width: 768px) {
-  body main .skill .wrapper #show_image {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    text-align: center;
-    color: #fff8fc;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-  }
-}
-
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #show_image img {
     width: 30%;
@@ -1205,7 +1187,7 @@ body main .skill .wrapper .js-spin {
   }
 }
 
-body main .skill .wrapper #mars {
+body main .skill .wrapper #scss {
   margin-top: -42.5px;
   margin-left: -42.5px;
   height: 85px;
@@ -1216,7 +1198,7 @@ body main .skill .wrapper #mars {
 }
 
 @media screen and (min-width: 768px) {
-  body main .skill .wrapper #mars {
+  body main .skill .wrapper #scss {
     margin-top: -20px;
     margin-left: -20px;
     height: 40px;
@@ -1225,7 +1207,7 @@ body main .skill .wrapper #mars {
 }
 
 @media screen and (min-width: 1024px) {
-  body main .skill .wrapper #mars {
+  body main .skill .wrapper #scss {
     width: 90px;
     height: 90px;
     margin-top: -45px;
@@ -1233,8 +1215,8 @@ body main .skill .wrapper #mars {
   }
 }
 
-body main .skill .wrapper .mars-orbit,
-body main .skill .wrapper .mars-spin {
+body main .skill .wrapper .scss-orbit,
+body main .skill .wrapper .scss-spin {
   width: 1000px;
   height: 1000px;
   margin-left: -500px;
@@ -1242,8 +1224,8 @@ body main .skill .wrapper .mars-spin {
 }
 
 @media screen and (min-width: 768px) {
-  body main .skill .wrapper .mars-orbit,
-  body main .skill .wrapper .mars-spin {
+  body main .skill .wrapper .scss-orbit,
+  body main .skill .wrapper .scss-spin {
     width: 700px;
     height: 700px;
     margin-left: -350px;
@@ -1252,8 +1234,8 @@ body main .skill .wrapper .mars-spin {
 }
 
 @media screen and (min-width: 1024px) {
-  body main .skill .wrapper .mars-orbit,
-  body main .skill .wrapper .mars-spin {
+  body main .skill .wrapper .scss-orbit,
+  body main .skill .wrapper .scss-spin {
     width: 1800px;
     height: 1800px;
     margin-top: -900px;
@@ -1333,13 +1315,13 @@ body main .skill .wrapper .js-spin {
   }
 }
 
-body main .skill .wrapper .mars-spin {
+body main .skill .wrapper .scss-spin {
   -webkit-animation: spin-right-mo 12s linear infinite;
           animation: spin-right-mo 12s linear infinite;
 }
 
 @media screen and (min-width: 768px) {
-  body main .skill .wrapper .mars-spin {
+  body main .skill .wrapper .scss-spin {
     -webkit-animation: spin-right 32s linear infinite;
             animation: spin-right 32s linear infinite;
   }
@@ -1382,6 +1364,7 @@ body main .popol .wrapper {
 }
 
 body main .popol .wrapper a {
+  position: relative;
   margin-top: 50px;
 }
 
@@ -1397,13 +1380,13 @@ body main .popol .wrapper a img {
 @media screen and (min-width: 768px) {
   body main .popol .wrapper a img {
     margin: 0;
-    width: 20%;
+    width: 25%;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .popol .wrapper a img {
-    width: 15%;
+    width: 10%;
   }
 }
 
