--- a/css/index.css
+++ b/css/index.css
@@ -997,6 +997,68 @@ body main .skill .wrapper #earth {
   border-radius: 50%;
 }
 
+body main .skill .wrapper #show_image .second {
+  position: absolute;
+  top: 50%;
+  left: 00%;
+  width: 1000px;
+}
+
+body main .skill .wrapper #show_image .second > canvas {
+  width: 1200px;
+  height: 1200px;
+  margin-left: -600px;
+  margin-top: -600px;
+}
+
+@media screen and (min-width: 768px) {
+  body main .skill .wrapper #show_image .second > canvas {
+    width: 160px;
+    height: 160px;
+    margin-left: -80px;
+    margin-top: -110px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body main .skill .wrapper #show_image .second > canvas {
+    width: 600px;
+    height: 600px;
+    margin-left: -300px;
+    margin-top: -350px;
+  }
+}
+
+body main .skill .wrapper #show_image .second > strong {
+  position: absolute;
+  top: 80%;
+  left: -60%;
+  font-size: 4em;
+  margin-top: 15px;
+  margin-bottom: 1px;
+  color: #fff8fc;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 768px) {
+  body main .skill .wrapper #show_image .second > strong {
+    top: 105%;
+    font-size: 1em;
+    margin-top: 15px;
+    margin-bottom: 1px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body main .skill .wrapper #show_image .second > strong {
+    top: 120%;
+    font-size: 2.8em;
+    margin-top: 15px;
+    margin-bottom: 1px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #show_image img {
     width: 30%;
